--- a/index.html
+++ b/index.html
@@ -5,6 +5,184 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="styles.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
     </head>
-    <body></body>
+
+    <body class="container">
+        <header class="header">
+            <div class="menu-logo">
+                <img
+                    src="images/mobile_menu 1.svg"
+                    alt=""
+                    onclick="popMenu()"
+                />
+                <img src="images/logo.svg" alt="" class="header-logo" />
+            </div>
+
+            <div class="pop-menu" id="menu-pop">
+                <i
+                    class="fa fa-times"
+                    aria-hidden="true"
+                    id="menu-close"
+                    onclick="closePop()"
+                ></i>
+                <ul>
+                    <li><a href="about.html">About</a></li>
+                    <li>Program</li>
+                    <li>Join</li>
+                    <li>Sponsor</li>
+                    <li>News</li>
+                    <li>Sponsor</li>
+                </ul>
+            </div>
+
+            <div class="desktop-logo">
+                <div class="desk-logo">
+                    <img src="images/logo.svg" alt="" class="header-logo" />
+                </div>
+                <div class="desktop-nav">
+                    <ul>
+                        <li><a href="about.html">About</a></li>
+                        <li>Program</li>
+                        <li>Join</li>
+                        <li>Sponsor</li>
+                        <li>News</li>
+                        <button>CC Campaign</button>
+                    </ul>
+                </div>
+            </div>
+        </header>
+
+        <section>
+            <div class="first-section">
+                <div class="first-writeup">
+                    <h4>"Hello Sharing World"</h4>
+                    <h1>CREATIVE COMMONS GLOBAL SUMMIT 2015</h1>
+                </div>
+                <div class="second-write-up">
+                    A joyful celebration believing in the value of openness and
+                    sharing, creating a positive change with people from over 80
+                    countries, is taking place in octobr in korea.
+                </div>
+                <div class="third-writeup">
+                    <h1>2015.10.15(THU) ~ 16(FRI)</h1>
+                    <h3>
+                        @Nartional Museum of Korea, Art Center Nabi and More
+                    </h3>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="main-program">
+                <h2>Main Program</h2>
+                <div class="main-line"></div>
+
+                <div class="prog-container">
+                    <div class="main-program1">
+                        <div class="main-icon">
+                            <img src="images/program_icon_01 1.svg" alt="" />
+                            <p>Lecture</p>
+                        </div>
+                        <div class="main-long-write">
+                            <p>
+                                Listen to the speakers from various countries
+                                about the message of sharing and opening
+                            </p>
+                        </div>
+                    </div>
+                    <div class="main-program1">
+                        <div class="main-icon">
+                            <img src="images/program_icon_02 1.svg" alt="" />
+                            <p>CC Exhibition</p>
+                        </div>
+                        <div class="main-long-write">
+                            <p>
+                                Appreciate various creations applying CC licnce
+                                for Artist organized from art center Nabi
+                            </p>
+                        </div>
+                    </div>
+                    <div class="main-program1">
+                        <div class="main-icon">
+                            <img src="images/program_icon_03 1.svg" alt="" />
+                            <p>Forum</p>
+                        </div>
+                        <div class="main-long-write">
+                            <p>
+                                Have the time to share yout thoughts and
+                                opinions with experts for each topic
+                            </p>
+                        </div>
+                    </div>
+                    <div class="main-program1">
+                        <div class="main-icon">
+                            <img src="images/program_icon_04 1.svg" alt="" />
+                            <p>Workshop</p>
+                        </div>
+                        <div class="main-long-write">
+                            <p>
+                                Try creaing your own work using open source
+                                license rather than just watching at it.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="main-program1">
+                        <div class="main-icon">
+                            <img src="images/program_icon_05 1.svg" alt="" />
+                            <p>CC Ignite</p>
+                        </div>
+                        <div class="main-long-write">
+                            <p>
+                                Get opportunities to network with CC affiliates
+                                arround the world also after the summit
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="global-summit">
+                    <h2>Join CC Global Summit 2015</h2>
+                </div>
+                <p class="desktop-see-prog">See the whole program</p>
+            </div>
+        </section>
+
+        <section>
+            <div class="featured-speakers">
+                <h3>Featured Speakers</h3>
+                <div class="featured-line"></div>
+
+                <!-- DESKTOP SPEAKERS -->
+                <div class="desktop-speakers"></div>
+
+                <div class="more-speakers">
+                    More <img src="images/arrow_down 1.svg" alt="" />
+                </div>
+            </div>
+            <div class="first-footer">
+                <h2>Partner</h2>
+                <div class="global-line"></div>
+                <div class="footer-logos">
+                    <img src="images/mozilla 1.svg" alt="" />
+                    <img src="images/googlekorea 1.svg" alt="" />
+                    <img src="images/naver 1.svg" alt="" />
+                    <img src="images/daumkakaologo 1.svg" alt="" />
+                    <img src="images/airbnb 1.svg" alt="" />
+                </div>
+            </div>
+            <div class="second-footer">
+                <img src="images/cck-logo1 1.svg" alt="" />
+                <div class="creative-common">
+                    <p>2015 Creative commons Korea Some Rights Reserved</p>
+                </div>
+            </div>
+        </section>
+
+        <script src="index.js"></script>
+    </body>
 </html>
