--- a/about.html
+++ b/about.html
@@ -10,8 +10,28 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@700&family=Roboto:ital,wght@0,100;1,100&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body class="container">
+        <div class="first-header">
+            <div class="face-twitter">
+                <img src="images/Rectangle.svg" alt="" />
+                <img src="images/twitter.svg" alt="" />
+            </div>
+            <div class="first-nav">
+                <ul>
+                    <li>English</li>
+                    <li>My Page</li>
+                    <li>Logout</li>
+                </ul>
+            </div>
+        </div>
+
         <header class="header">
             <div class="menu-logo">
                 <img
@@ -19,9 +39,6 @@
                     alt=""
                     onclick="popMenu()"
                 />
-                <a href="index.html"
-                    ><img src="images/logo.svg" alt="" class="header-logo"
-                /></a>
             </div>
 
             <div class="pop-menu" id="menu-pop">
@@ -123,7 +140,7 @@
                 </div>
             </div>
 
-            <div class="first-footer">
+            <div class="first-footer-about">
                 <h2>Partner</h2>
                 <div class="global-line"></div>
                 <div class="footer-logos">
@@ -135,9 +152,18 @@
                 </div>
             </div>
 
-            <div class="second-footer">
-                <img src="images/cck-logo1 1.svg" alt="" />
-                <div class="creative-common">
+            <div class="second-footer-about">
+                <img
+                    src="images/cck-logo1 1.svg"
+                    class="foot-img-desk1"
+                    alt=""
+                />
+                <img
+                    src="images/cck-logo1 1 (1).svg"
+                    class="foot-img-desk2"
+                    alt=""
+                />
+                <div class="creative-common2">
                     <p>2015 Creative commons Korea Some Rights Reserved</p>
                 </div>
             </div>
